# sbe2comms_example

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
cc_plugin/: AllMessages.h  CMakeLists.txt  Message.h  MessageHeaderFramePlugin.cpp  MessageHeaderFramePlugin.h  MessageHeaderFrameProtocol.cpp  MessageHeaderFrameTransportMessage.cpp  MessageHeaderFrameTransportMessage.h  OpenFramingHeaderFramePlugin.cpp  OpenFramingHeaderFramePlugin.h  OpenFramingHeaderFrameProtocol.cpp  OpenFramingHeaderFrameTransportMessage.cpp  OpenFramingHeaderFrameTransportMessage.h  Protocol.h  TransportFrame.h  field.cpp  field.h  plugin_MessageHeaderFrame.json  plugin_OpenFramingHeaderFrame.json
cc_plugin/message/: Car.cpp  Car.h
doc/: doxygen.conf  extension.dox  layout.xml  main.dox  sbe_example.dox
include/extension/: AllMessages.h  DefaultOptions.h  Message.h  MessageHeaderLayer.h  MessageSchema.h  MsgId.h  OpenFramingHeaderLayer.h  TransportFrame.h
include/extension/field/: BooleanType.h  Booster.h  Engine.h  FieldBase.h  Model.h  ModelYear.h  OptionalExtras.h  Percentage.h  Ron.h  VehicleCode.h  cupHolderCount_t.h  groupSizeEncoding.h  messageHeader.h  someNumbers.h  varDataEncoding.h  varStringEncoding.h
include/extension/message/: Car.h
include/extension/sbe2comms/: VersionSetter.h  float.h  groupList.h  openFramingHeader.h  uint16.h  uint64.h
include/sbe_example/: AllMessages.h  DefaultOptions.h  Message.h  MessageHeaderLayer.h  MsgId.h  OpenFramingHeaderLayer.h  TransportFrame.h
include/sbe_example/field/: BooleanType.h  Booster.h  Engine.h  FieldBase.h  Model.h  ModelYear.h  OptionalExtras.h  Percentage.h  Ron.h  VehicleCode.h  cupHolderCount_t.h  groupSizeEncoding.h  messageHeader.h  someNumbers.h  varDataEncoding.h  varStringEncoding.h
include/sbe_example/message/: Car.h
include/sbe_example/sbe2comms/: VersionSetter.h  float.h  groupList.h  openFramingHeader.h  uint16.h  uint64.h
